--- a/aulas/study01/index.css
+++ b/aulas/study01/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../images/manhã.jpg');
+    background-image: url('images/manhã.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
