--- a/aulas/study02/study02.css
+++ b/aulas/study02/study02.css
@@ -41,3 +41,18 @@ h1 {
     
 }
 
+#btnCd-el {
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+    color: #016f32;
+    background-color: goldenrod;
+    font-weight: bolder;
+    font-size: 1.2em;
+    width: 150px;
+    height: 50px;
+    border-style: none;
+    border-radius: 5px;
+}
+
+
