--- a/aulas/study02/study02.css
+++ b/aulas/study02/study02.css
@@ -1,20 +1,18 @@
 * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
 }
 
 body {
     background-image: url('images/table.png');
     background-size: cover;
+    background-attachment: fixed;
     text-align: center;
-
 }
 
 p {
     text-align: center;
     color: white;
     font-size: 1.3em;
-
 }
 
 h1 {
@@ -22,7 +20,6 @@ h1 {
     text-align: center;
     font-size: 3em;
     font-weight: bolder;
-
 }
 
 #message-el {
@@ -38,7 +35,6 @@ h1 {
     height: 50px;
     border-style: none;
     border-radius: 5px;
-    
 }
 
 #btnCd-el {
@@ -54,5 +50,3 @@ h1 {
     border-style: none;
     border-radius: 5px;
 }
-
-
