--- a/aulas/chrome/index.css
+++ b/aulas/chrome/index.css
@@ -2,6 +2,8 @@
     margin: 0px;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
+    
 }
 
 :root {
@@ -26,4 +28,18 @@ button {
     border: none;
     padding: 10px 20px;
 
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 5px;
+}
+
+li {
+    margin-top: 2px;
+}
+
+a {
+    color: #5f9341;
 }
