--- a/aulas/chrome/index.css
+++ b/aulas/chrome/index.css
@@ -20,7 +20,7 @@ input {
 }
 
 button {
-    display: block;
+    display: inline-block;
     margin-top: 5px;
     background-color: var(--color);
     color: white;
@@ -28,6 +28,27 @@ button {
     border: none;
     padding: 10px 20px;
 
+}
+
+button:hover {
+    border: solid 2px;
+    border-color: #225c03;
+    cursor: pointer;
+
+}
+
+#delete-btn {
+    background-color: white;
+    border: solid 1px;
+    color: var(--color);
+    padding: 9px 10px;
+
+}
+
+#delete-btn:hover {
+    border: solid 2px;
+    border-color: #225c03;
+    cursor: pointer;
 }
 
 ul {
